--- a/index.html
+++ b/index.html
@@ -12,45 +12,55 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="list">
-          <li>
-            <a class="nav-link link" href="./index.html">Studio</a>
-          </li>
-          <li><a class="nav-link link" href="">Portfolio</a></li>
-          <li><a class="nav-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="heder-address">
-        <ul class="heder-adresss-list list">
-          <li class="heder-address-item">
-            <a class="heder-address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="heder-address-item">
-            <a class="heder-address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="list">
+            <li>
+              <a class="nav-link link" href="./index.html">Studio</a>
+            </li>
+            <li><a class="nav-link link" href="">Portfolio</a></li>
+            <li><a class="nav-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="heder-address">
+          <ul class="heder-adresss-list list">
+            <li class="heder-address-item">
+              <a
+                class="heder-address-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="heder-address-item">
+              <a class="heder-address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section>
+        <div class="container">
         <h2 class="visually-hidden">Plan</h2>
         <ul class="list">
           <li>
@@ -82,8 +92,10 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <section class="team-section">
+        <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="list">
           <li class="team-item">
@@ -127,8 +139,10 @@
             <p class="position">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
       <section class="portfolio">
+        <div class="cection">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="list">
           <li>
@@ -195,6 +209,7 @@
       </section>
     </main>
     <footer class="footer-color">
+      <div class="container">
       <a class="link footer-logo" href="./index.html"
         >Web<span class="footer-logo-part">Studio</span></a
       >
@@ -202,6 +217,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
