--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="navigation">
           <a class="link logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
           >
-          <ul class="list">
+          <ul class="heder-list list">
             <li>
               <a class="nav-link link" href="./index.html">Studio</a>
             </li>
@@ -59,32 +59,32 @@
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="princeples">
         <div class="container">
         <h2 class="visually-hidden">Plan</h2>
-        <ul class="list">
-          <li>
+        <ul class=" princeples-list list">
+          <li class="princeples-text">
             <h3 class="feature">Strategy</h3>
             <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="princeples-text">
             <h3 class="feature">Punctuality</h3>
             <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="princeples-text">
             <h3 class="feature">Diligence</h3>
             <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="princeples-text">
             <h3 class="feature">Technologies</h3>
             <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
@@ -95,7 +95,7 @@
         </div>
       </section>
       <section class="team-section">
-        <div class="container">
+        <div class="container team-container">
         <h2 class="team-title">Our Team</h2>
         <ul class="list">
           <li class="team-item">
@@ -142,68 +142,80 @@
         </div>
       </section>
       <section class="portfolio">
-        <div class="cection">
+        <div class="container portfolio-container">
         <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="list">
-          <li>
+        <ul class="portfolio-list list">
+          <li class="portfolio-item-list">
             <img
               src="./images/Portfolio1.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Banking App</h3>
             <p class="portfolio-text">App</p>
+            </div>
           </li>
-          <li>
-            <img
+          <li class="portfolio-item-list">
+            <img class=""
               src="./images/Portfolio2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
-          <li>
-            <img
+          <li class="portfolio-item-list">
+            <img class=""
               src="./images/Portfolio3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Meditation App</h3>
             <p class="portfolio-text">App</p>
+            </div>
           </li>
-          <li>
-            <img
+          <li class="portfolio-item-list">
+            <img class=""
               src="./images/Portfolio4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
-          <li>
-            <img
+          <li class="portfolio-item-list">
+            <img class=""
               src="./images/Portfolio5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
+            </div>
           </li>
-          <li>
-            <img
+          <li class="portfolio-item-list">
+            <img class=""
               src="./images/Portfolio6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
+            <div class="portfolio-item-box">
             <h3 class="portfolio-item">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
         </ul>
       </section>
