--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </section>
       <section class="princeples">
-        <div class="container">
+        <div class="container princeples-container">
         <h2 class="visually-hidden">Plan</h2>
         <ul class=" princeples-list list">
           <li class="princeples-text">
@@ -97,7 +97,7 @@
       <section class="team-section">
         <div class="container team-container">
         <h2 class="team-title">Our Team</h2>
-        <ul class="list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               src="./images/img-3.jpg"
@@ -105,8 +105,10 @@
               width="264"
               height="260"
             />
+            <div class="workers">
             <h3 class="name">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -115,8 +117,10 @@
               width="264"
               height="260"
             />
+            <div class="workers">
             <h3 class="name">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -125,8 +129,10 @@
               width="264"
               height="260"
             />
+            <div class="workers">
             <h3 class="name">Camila Garcia</h3>
             <p class="position">Marketing</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -135,8 +141,10 @@
               width="264"
               height="260"
             />
+            <div class="workers">
             <h3 class="name">Daniel Wilson</h3>
             <p class="position">UI Designer</p>
+            </div>
           </li>
         </ul>
         </div>
@@ -221,7 +229,7 @@
       </section>
     </main>
     <footer class="footer-color">
-      <div class="container">
+      <div class="container footer-container">
       <a class="link footer-logo" href="./index.html"
         >Web<span class="footer-logo-part">Studio</span></a
       >
