--- a/index.html
+++ b/index.html
@@ -61,182 +61,188 @@
       </section>
       <section class="princeples">
         <div class="container princeples-container">
-        <h2 class="visually-hidden">Plan</h2>
-        <ul class=" princeples-list list">
-          <li class="princeples-text">
-            <h3 class="feature">Strategy</h3>
-            <p class="feature-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="princeples-text">
-            <h3 class="feature">Punctuality</h3>
-            <p class="feature-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="princeples-text">
-            <h3 class="feature">Diligence</h3>
-            <p class="feature-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="princeples-text">
-            <h3 class="feature">Technologies</h3>
-            <p class="feature-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+          <h2 class="visually-hidden">Plan</h2>
+          <ul class="princeples-list list">
+            <li class="princeples-text">
+              <h3 class="feature">Strategy</h3>
+              <p class="feature-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="princeples-text">
+              <h3 class="feature">Punctuality</h3>
+              <p class="feature-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="princeples-text">
+              <h3 class="feature">Diligence</h3>
+              <p class="feature-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="princeples-text">
+              <h3 class="feature">Technologies</h3>
+              <p class="feature-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="team-section">
         <div class="container team-container">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/img-3.jpg"
-              alt="Photo Product Designer"
-              width="264"
-              height="260"
-            />
-            <div class="workers">
-            <h3 class="name">Mark Guerrero</h3>
-            <p class="position">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-2.jpg"
-              alt="Photo Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <div class="workers">
-            <h3 class="name">Tom Ford</h3>
-            <p class="position">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-1.jpg"
-              alt="Photo Marketing"
-              width="264"
-              height="260"
-            />
-            <div class="workers">
-            <h3 class="name">Camila Garcia</h3>
-            <p class="position">Marketing</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img.jpg"
-              alt="Photo UI Designer"
-              width="264"
-              height="260"
-            />
-            <div class="workers">
-            <h3 class="name">Daniel Wilson</h3>
-            <p class="position">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/img-3.jpg"
+                alt="Photo Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="workers">
+                <h3 class="name">Mark Guerrero</h3>
+                <p class="position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-2.jpg"
+                alt="Photo Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="workers">
+                <h3 class="name">Tom Ford</h3>
+                <p class="position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-1.jpg"
+                alt="Photo Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="workers">
+                <h3 class="name">Camila Garcia</h3>
+                <p class="position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img.jpg"
+                alt="Photo UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="workers">
+                <h3 class="name">Daniel Wilson</h3>
+                <p class="position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="portfolio">
         <div class="container portfolio-container">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item-list">
-            <img
-              src="./images/Portfolio1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Banking App</h3>
-            <p class="portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-item-list">
-            <img class=""
-              src="./images/Portfolio2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-item-list">
-            <img class=""
-              src="./images/Portfolio3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-item-list">
-            <img class=""
-              src="./images/Portfolio4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-item-list">
-            <img class=""
-              src="./images/Portfolio5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-            </div>
-          </li>
-          <li class="portfolio-item-list">
-            <img class=""
-              src="./images/Portfolio6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-item-box">
-            <h3 class="portfolio-item">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-        </ul>
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item-list">
+              <img
+                src="./images/Portfolio1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item-list">
+              <img
+                class=""
+                src="./images/Portfolio2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item-list">
+              <img
+                class=""
+                src="./images/Portfolio3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item-list">
+              <img
+                class=""
+                src="./images/Portfolio4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item-list">
+              <img
+                class=""
+                src="./images/Portfolio5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item-list">
+              <img
+                class=""
+                src="./images/Portfolio6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-box">
+                <h3 class="portfolio-item">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-color">
       <div class="container footer-container">
-      <a class="link footer-logo" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <a class="link footer-logo" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
