--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item-list">
               <img
+                class="portfolio-img"
                 src="./images/Portfolio1.jpg"
                 alt="Banking App"
                 width="360"
@@ -167,7 +168,7 @@
             </li>
             <li class="portfolio-item-list">
               <img
-                class=""
+                class="portfolio-img"
                 src="./images/Portfolio2.jpg"
                 alt="Cashless Payment"
                 width="360"
@@ -180,7 +181,7 @@
             </li>
             <li class="portfolio-item-list">
               <img
-                class=""
+                class="portfolio-img"
                 src="./images/Portfolio3.jpg"
                 alt="Meditation App"
                 width="360"
@@ -193,7 +194,7 @@
             </li>
             <li class="portfolio-item-list">
               <img
-                class=""
+                class="portfolio-img"
                 src="./images/Portfolio4.jpg"
                 alt="Taxi Service"
                 width="360"
@@ -206,7 +207,7 @@
             </li>
             <li class="portfolio-item-list">
               <img
-                class=""
+                class="portfolio-img"
                 src="./images/Portfolio5.jpg"
                 alt="Screen Illustrations"
                 width="360"
@@ -219,7 +220,7 @@
             </li>
             <li class="portfolio-item-list">
               <img
-                class=""
+                class="portfolio-img"
                 src="./images/Portfolio6.jpg"
                 alt="Online Courses"
                 width="360"
